--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main>
+        <h1>Sign Up</h1>
         <div class="form-container">
            <div class="form">
               <form action="/signup" method="post">
