--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <h1>To-do List</h1>
+        <h1>Sign In</h1>
         <div class="form-container">
            <div class="form">
               <form action="/signin" method="post">
